syntax = "proto3";
option go_package="./pb";


service ArticleService {
    rpc Create(CreateArticleRequest) returns (CreateArticleResponse) {}
    rpc Update(UpdateArticleRequest) returns (UpdateArticleResponse) {}
    rpc Get(GetArticleRequest) returns (GetArticleResponse) {}
    rpc GetStream(GetArticlesRequest) returns (stream Article) {}
} 

message Article {
    string id = 1;
    string user_id = 2;
    string title = 4;
    string body = 3;
}

message CreateArticleRequest {
    Article article = 1;
}

message CreateArticleResponse {
    string id = 1 ;
}

message UpdateArticleRequest {
    Article article = 1;
}

message UpdateArticleResponse {}

message DeleteArticleRequest {
    string id = 1;
}

message DeleteArticleResponse {}

message GetArticleRequest {
    string article_id = 1;
}

message GetArticlesRequest {
    string offset = 1;
    string limit = 2;
}

message GetArticleResponse {
    Article article = 1;
}